// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Modale Default smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`Design System/Modale LongContent smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`Design System/Modale Size smoke-test 1`] = `
<div class="p-8">
  <div class="flex items-center gap-6">
    <button text="sm"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
    >
      sm
    </button>
    <button text="md"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
    >
      md
    </button>
    <button text="lg"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
    >
      lg
    </button>
    <button text="xl"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
    >
      xl
    </button>
  </div>
</div>
`;

exports[`Design System/Modale WithRender smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`Design System/Modale onlyRender smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="min-w-[5rem] p-2 rounded-lg border border-solid border-grey-5"
  >
    Ouvrir la modale
  </button>
</div>
`;
